# SmartSorter

./: .gitignore  CHANGELOG.md  README.md  index.html  package.json  pnpm-lock.yaml
.github/workflows/: release.yml
.qwen/: settings.json  settings.json.orig
doc/: SmartSorter v1 产品需求文档.md  SmartSorter v1 使用说明书.md  SmartSorter v1 技术设计文档.md  SmartSorter v1.0 产品需求文档.md  SmartSorter v1.0 使用说明书.md  SmartSorter v1.0 技术设计文档.md  SmartSorter 发布指南.md  SmartSorter 发布版本指南.md
scripts/: generate-latest-json.ps1  release.ps1
src/: App.vue  router.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: duplicate_commands.rs  execute_commands.rs  history_commands.rs  media_commands.rs  mod.rs  preview_commands.rs  rule_commands.rs
src-tauri/src/engine/: executor.rs  hasher.rs  matcher.rs  metadata.rs  mod.rs  scanner.rs  transformer.rs  undo.rs
src-tauri/src/models/: duplicate.rs  log.rs  media_classify.rs  mod.rs  preview.rs  progress.rs  rule.rs
src-tauri/src/storage/: log_store.rs  mod.rs  rule_store.rs
src/components/: ProgressBar.vue  Sidebar.vue
src/components/PreviewTree/: PreviewRow.vue  PreviewTable.vue  SummaryBar.vue
src/components/RuleBuilder/: ActionRow.vue  ConditionRow.vue  MagicVarRef.vue  RuleCard.vue
src/stores/: historyStore.ts  previewStore.ts  ruleStore.ts
src/types/: index.ts
src/utils/: tauriApi.ts
src/views/: DuplicateView.vue  HistoryView.vue  MediaClassifyView.vue  SettingsView.vue  WorkspaceView.vue
